--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,6 @@
         android:text="Добавить событие"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="GoToDisToo"/>
+        android:onClick="GoToDisTwo"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
