--- a/app/src/main/res/layout/activity_event_add.xml
+++ b/app/src/main/res/layout/activity_event_add.xml
@@ -7,7 +7,7 @@
     tools:context=".AddEventActivity">
 
     <TextView
-        android:id="@+id/suggest_numb"
+        android:id="@+id/suggestNumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -19,7 +19,7 @@
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/suggest_descriptor"
+        android:id="@+id/suggestDescriptor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -27,11 +27,11 @@
         android:layout_marginTop="30dp"
         android:text="Опишите событие:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_numb"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumb"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/time_date"
+        android:id="@+id/timeDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -39,11 +39,11 @@
         android:layout_marginTop="30dp"
         android:text="Дата и время создания:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_descriptor"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDescriptor"
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/button_cancel"
+        android:id="@+id/buttonCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="90dp"
@@ -56,7 +56,7 @@
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/button_ok"
+        android:id="@+id/buttonOk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -65,11 +65,11 @@
         android:onClick="goToMainActivityWithEvent"
         android:text="Подтвердить"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_cancel"
+        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
         tools:ignore="HardcodedText" />
 
     <EditText
-        android:id="@+id/edit_text_numb"
+        android:id="@+id/editTextNumb"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -81,11 +81,11 @@
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/suggest_numb"
+        app:layout_constraintTop_toBottomOf="@+id/suggestNumb"
         tools:ignore="HardcodedText" />
 
     <EditText
-        android:id="@+id/edit_text_descriptor"
+        android:id="@+id/editTextDescriptor"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -96,11 +96,11 @@
         android:hint="Описание"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/suggest_descriptor"
+        app:layout_constraintTop_toBottomOf="@+id/suggestDescriptor"
         tools:ignore="HardcodedText" />
 
     <EditText
-        android:id="@+id/edit_text_time_date"
+        android:id="@+id/editTextTimeDate"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -112,39 +112,39 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time_date" />
+        app:layout_constraintTop_toBottomOf="@+id/timeDate" />
 
     <TextView
-        android:id="@+id/error_numb"
+        android:id="@+id/errorNumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="15dp"
         android:textColor="#F44336"
-        app:layout_constraintStart_toEndOf="@+id/suggest_numb"
+        app:layout_constraintStart_toEndOf="@+id/suggestNumb"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/error_desc"
+        android:id="@+id/errorDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
         android:textColor="#F44336"
-        app:layout_constraintStart_toEndOf="@+id/suggest_descriptor"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_numb" />
+        app:layout_constraintStart_toEndOf="@+id/suggestDescriptor"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumb" />
 
     <TextView
-        android:id="@+id/error_date_time"
+        android:id="@+id/errorDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
         android:textColor="#F44336"
-        app:layout_constraintStart_toEndOf="@+id/time_date"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_descriptor" />
+        app:layout_constraintStart_toEndOf="@+id/timeDate"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDescriptor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
